--- a/hyprland.conf
+++ b/hyprland.conf
@@ -77,7 +77,7 @@ $bin = /home/mike/.dotFiles/bin/
 # See https://wiki.hypr.land/Configuring/Keywords/
 # personal bind
 bind = , XF86HomePage, exec, follow_mouse.sh no #-> Follow mouse
-bindr = , XF86ZoomIn, exec, follow_mouse.sh yes #-> Follow mouse
+bindr = , XF86HomePage, exec, follow_mouse.sh yes #-> Follow mouse
 bind = $mainMod SHIFT, SPACE, exec, bar -b #-> Waybar Big
 bind = $mainMod SHIFT, P, exec, $bin/pwm #-> Password Manager
 bind = $mainMod, SPACE, exec, bar -s #-> Waybar Small
@@ -89,9 +89,11 @@ bind = $mainMod SHIFT, F, fullscreen
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod SHIFT, Return, exec, $terminal #-> Terminal
 bind = $mainMod, Q, killactive
-bind = $mainMod SHIFT, Q, exec, kitty --title="ExitScript" -e exit_script.sh #-> Exit Script
+bind = $mainMod Ctrl, Q, exec, kitty --title="ExitScript" -e exit_script.sh #-> Exit Script
+bind = $mainMod SHIFT, Q, exec, hyprshutdown
 # bind = $mainMod, E, exec, thunar
-bind = $mainMod, m, exec, pkill wofi || wofi #-> menu
+# bind = $mainMod, m, exec, pkill wofi || wofi #-> menu
+bind = $mainMod, m, exec, pkill hyprlauncher || hyprlauncher
 # bind = $mainMod, m, exec, kitty --title="launcher" -e launcher.sh
 bind = $mainMod, b, exec, wp_random.sh #-> wallpaper randomizer
 bind = $mainMod SHIFT, C, centerwindow 
