--- a/sources/look_and_feel.conf
+++ b/sources/look_and_feel.conf
@@ -10,7 +10,7 @@ master {
 		orientation = center
 		slave_count_for_center_master = 2
 		center_master_fallback = center
-		always_keep_position = true
+		always_keep_position = false
 
 }
 
@@ -38,7 +38,7 @@ general {
     # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
     # Default layout choices are 'dwindle' and 'master'. More layouts available via plugin.
-    layout = master
+    layout = scrolling
     # snap is for floating windows and whether or not they should stick
     # at the edges of the monitor and other windows<D-Bslash>
     snap {
