--- a/sources/monitors.conf
+++ b/sources/monitors.conf
@@ -2,12 +2,12 @@ $OutputLeft = HDMI-A-1
 $OutputRight = DVI-D-1
 # Big Monitor
 monitor=$OutputLeft, 2560x1440@120.00Hz, 0x0, 1
-# monitor=$OutputLeft, addreserved, 10, 10, 20, 20    
-workspace = 1, monitor:$OutputLeft, default:true, defaultName:1-Home, decorate:true
-workspace = 3, monitor:$OutputLeft, defaultName:3-BGp's
-workspace = 5, monitor:$OutputLeft
+monitor=$OutputLeft, addreserved, 10, 10, 20, 20    
+workspace = 1, monitor:$OutputLeft, default:true, defaultName:Home, decorate:true
+workspace = 3, monitor:$OutputLeft, defaultName:Web, decorate:true
+workspace = 5, monitor:$OutputLeft, defaultName:Code, decorate:true
 workspace = 7, monitor:$OutputLeft
-workspace = 9, monitor:$OutputLeft, defaultName:9-1BG
+workspace = 9, monitor:$OutputLeft
 
 # Small Monitor
 
