--- a/sources/specialWorkspaces.conf
+++ b/sources/specialWorkspaces.conf
@@ -27,16 +27,32 @@ workspace = special:my_yazi, rounding:false, monitor:0, on-created-empty:[float;
 bind = $mainMod, e, togglespecialworkspace, my_yazi
 bind = $mainMod, e, exec, resize_center.sh 95% 92%
 
-workspace = special:fm, rounding:false, monitor:0, on-created-empty:[float; size 65% 65%;] thunar
+windowrule {
+		name = fm
+		float = true
+		match:class = Thunar
+
+		size = 1024 512
+}
+workspace = special:fm, rounding:false, monitor:0, on-created-empty:thunar
 bind = $mainMod SHIFT, e, togglespecialworkspace, fm
 bind = $mainMod SHIFT, e, exec, resize_center.sh 65% 65%
 
 # notes
-workspace = special:notes, rounding:false, monitor:0, on-created-empty:[float; size 45% 92%; move 54% 3.5%] kitty --config ~/.config/kitty/floating_kitty.conf --title='notes' -e nvim /home/mike/md_notes/index.md
+windowrule {
+		name = notes
+		float = true
+		match:title = notes
+
+		size = 1190 1390
+		animation = popin
+}
+
+workspace = special:notes, rounding:false, monitor:0, on-created-empty:kitty --config ~/.config/kitty/floating_kitty.conf --title='notes' -e nvim /home/mike/md_notes/index.md
 bind = , XF86Calculator, togglespecialworkspace, notes
 bind = , XF86Calculator, focusmonitor, HDMI-A-1
 bind = , XF86Calculator, centerwindow
-bind = , XF86Calculator, moveactive, 635 20
+bind = , XF86Calculator, moveactive, 675 0
 
 workspace = special:my_copy, rounding:false, on-created-empty:[float; size 90% 95%] copyq toggle
 bind = $mainMod Ctrl, x, focusmonitor, HDMI-A-1
