--- a/sources/submaps.conf
+++ b/sources/submaps.conf
@@ -45,7 +45,7 @@ bind = $mainMod, C, submap, reset
 bind = , escape, submap, reset
 submap = reset
 
-# --------------------------------------------
+# NOTE: --------------------------------------------
 bind = , XF86Search, submap, workspaces
 submap = workspaces
 
@@ -54,34 +54,32 @@ bind = , d, exec, hyprctl keyword general:layout dwindle #-> Set layout to dwind
 bind = , m, exec, hyprctl keyword general:layout master #-> Set layout to master
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind =  ,XF86Back, exec, smc -h "movetoworkspace 1" #-> Move to WS 1
-bind =  , XF86Forward, exec, smc -h "movetoworkspace 2" #-> Move to WS 2
-bind =  Ctrl, minus, exec, smc -h "movetoworkspace 3" #-> Move to WS 3
-bind =  Ctrl, equal, exec, smc -h "movetoworkspace 4" #-> Move to WS 4
-bind =  SHIFT, 5, exec, smc -h "movetoworkspace 5" #-> Move to WS 5
-bind =  SHIFT, 6, exec, smc -h "movetoworkspace 6" #-> Move to WS 6
-bind =  SHIFT, 7, exec, smc -h "movetoworkspace 7" #-> Move to WS 7
-bind =  SHIFT, 8, exec, smc -h "movetoworkspace 8" #-> Move to WS 8
-bind =  SHIFT, 9, exec, smc -h "movetoworkspace 9" #-> Move to WS 9
-bind =  SHIFT, 0, exec, smc -h "movetoworkspace 10" #-> Move to WS 10
+bind =  , 1,exec, smc -h "movetoworkspace 1" #-> Move to WS 1
+bind =  , 2, exec, smc -h "movetoworkspace 2" #-> Move to WS 2
+bind =  , 3, exec, smc -h "movetoworkspace 3" #-> Move to WS 3
+bind =  , 4, exec, smc -h "movetoworkspace 4" #-> Move to WS 4
+bind =  , 5, exec, smc -h "movetoworkspace 5" #-> Move to WS 5
+bind =  , 6, exec, smc -h "movetoworkspace 6" #-> Move to WS 6
+bind =  , 7, exec, smc -h "movetoworkspace 7" #-> Move to WS 7
+bind =  , 8, exec, smc -h "movetoworkspace 8" #-> Move to WS 8
+bind =  , 9, exec, smc -h "movetoworkspace 9" #-> Move to WS 9
+bind =  , 0, exec, smc -h "movetoworkspace 10" #-> Move to WS 10
 
-bind = $mainMod, XF86Back, exec, smc -c "layoutmsg colresize -conf" #-> Column Shrink
-bind = $mainMod, XF86Forward, exec, smc -c "layoutmsg colresize +conf" #-> Column Grow
-bind = SHIFT, f, exec, smc -c "layoutmsg fit all" #-> Fit All
-bind = $mainMod, f, exec, smc -c "layoutmsg togglefit" #-> Toggle Fit
-bind = $mainMod, XF86Back, exec, smc -h "movecurrentworkspacetomonitor l" #-> Move Monitor Left
-bind = $mainMod, XF86Forward, exec, smc -h "movecurrentworkspacetomonitor r" #-> Move Monitor Right
-
-
-bind = , f, togglefloating
-bind = , r, workspace, 3
-bind = , r, exec, smc -h "workspace 1" #-> Reset View
+bind = , h, exec, smc -c "layoutmsg colresize -conf" #-> Column Shrink
+bind = , l, exec, smc -c "layoutmsg colresize +conf" #-> Column Grow
+bind = SHIFT, f, exec, smc -c "layoutmsg fit all" #-> [F]it All
+bind = , a, exec, smc -c "layoutmsg togglefit" #-> Re-[a]lign
+bind = , XF86Back, exec, smc -h "movecurrentworkspacetomonitor l" #-> Move Monitor Left
+bind = , XF86Forward, exec, smc -h "movecurrentworkspacetomonitor r" #-> Move Monitor Right
+bind = , t, togglefloating
+bind = , r, exec, smc -n reset.sh #-> Reset View
 bind = , XF86Search, submap, reset
-bind = , XF86ZoomIn, submap, reset
 bind = , escape, submap, reset
 submap = reset
 
-bind = $mainMod, O, submap, opacity
+
+# NOTE: --------------------------------------------
+bind = $mainMod, o, submap, opacity
 submap = opacity
 
 bind = , 0, setprop, active, alpha 1.0
@@ -94,6 +92,7 @@ bind = , 6, setprop, active, alpha 0.6
 bind = , 7, setprop, active, alpha 0.7
 bind = , 8, setprop, active, alpha 0.8
 bind = , 9, setprop, active, alpha 0.9
+
 bind = , o, submap, reset
 bind = , escape, submap, reset
 submap = reset
