--- a/sources/windowrules.conf
+++ b/sources/windowrules.conf
@@ -1,44 +1,79 @@
-# # NOTE : Window Rules
-windowrule = float, class:thunar
-windowrule = float, class:com.github.hluk.copyq
-windowrule = float, class:mpv
-windowrule = float, class:photoqt
-windowrule = float, class:file-jpeg
-windowrule = float, class:zenity
-windowrule = float, title:colorList
-windowrule = size 970px 480px, title:colorList
-windowrule = float, title:ExitScript
-windowrule = size 384px 128px, title:ExitScript
-windowrule = float, title:"Save File"
-windowrule = float, title:org.musicbrainz.Picard
-windowrule = size 50% 50%, title:org.musicbrainz.Picard
-windowrule = float,title:live_server, monitor:DVI-D-1, special:notes
+# # # NOTE : Window Rules
+# windowrule = float, class:thunar
+# windowrule = float, class:com.github.hluk.copyq
+# windowrule = float, class:mpv
+# windowrule = float, class:photoqt
+# windowrule = float, class:file-jpeg
+# windowrule = float, class:zenity
+# windowrule = float, title:colorList
+# windowrule = size 970px 480px, title:colorList
+# windowrule = float, title:ExitScript
+# windowrule = size 384px 128px, title:ExitScript
+# windowrule = float, title:"Save File"
+# windowrule = float, title:org.musicbrainz.Picard
+# windowrule = size 50% 50%, title:org.musicbrainz.Picard
+# windowrule = float,title:live_server, monitor:DVI-D-1, special:notes
 
-# windowrule = match:class thunar, float yes
-# windowrule = match:class com.github.hluk.copyq, float yes
-# windowrule = match:class mpv, float yes
-# windowrule = match:class photoqt, float yes
-# windowrule = match:class file-jpeg float
-# windowrule = match:class zenity, float yes
-# windowrule = match:title colorlist, float yes
-# windowrule = match:title colorlist, size 970px 480px
-# windowrule = match:title hyprConf, float yes
-# windowrule = match:title fishConf, float yes
-# windowrule = match:title kittyConf, float yes
-# windowrule = match:title nvimConf, float yes
-# windowrule = match:title wayConf, float yes
-# windowrule = match:title binConf, float yes
-# windowrule = match:title devConf, float yes
-# windowrule = match:title ncmpcppConf, float yes
-# windowrule = match:class thunar, size 50% 50%
-# windowrule = match:class org.qutebrowser.qutebrowser workspace 1
-# windowrule = match:class live_server monitor:DVI-D-1 special:notes
-# windowrule = match:class Conky noblur
-#
-# windowrule = match:title "Save File" float
-# windowrule = match:title org.musicbrainz.Picard float
-# windowrule = match:title org.musicbrainz.Picardsize 50% 50%
-# windowrule = match:title ExitScript float
-#
-# windowrule = match:class * suppressevent maximize
+windowrule = match:class thunar, float yes
+windowrule = match:class com.github.hluk.copyq, float yes
+windowrule = match:class mpv, float yes
+windowrule = match:class photoqt, float yes
+windowrule = match:class file-jpeg float
+windowrule = match:class zenity, float yes
+
+
+windowrule {
+		name = colorList
+		match:title = colorList
+		float = true
+
+        size = 970 480
+		center = on
+}
+
+windowrule = match:title hyprConf, float yes
+windowrule = match:title fishConf, float yes
+windowrule = match:title kittyConf, float yes
+windowrule = match:title nvimConf, float yes
+windowrule = match:title wayConf, float yes
+windowrule = match:title binConf, float yes
+windowrule = match:title devConf, float yes
+windowrule = match:title ncmpcppConf, float yes
+windowrule = match:class thunar, size 50% 50%
+windowrule = match:class org.qutebrowser.qutebrowser workspace 1
+windowrule = match:class live_server monitor:DVI-D-1 special:notes
+windowrule = match:class Conky noblur
+
+windowrule {
+		name = "Save File"
+		match:title = "Save File"
+		float = true
+
+        size = 1024 768
+		center = on
+}
+
+windowrule {
+		name = tags
+		match:class = org.musicbrainz.Picard
+		float = true
+
+		size = 1280 720
+		move = 1270 360
+}
+
+windowrule = match:title org.musicbrainz.Picard float
+windowrule = match:title org.musicbrainz.Picard size 50% 50%
+
+windowrule {
+		name = ExitScript
+        match:title = ExitScript
+        float = true
+
+        size = 384 128
+		center = on
+}
+
+
+windowrule = match:class * suppressevent maximize
 # Fix some dragging issues with XWayland
