--- a/sources/monitors.conf
+++ b/sources/monitors.conf
@@ -4,16 +4,16 @@ $OutputRight = DVI-D-1
 monitor=$OutputLeft, 2560x1440@120.00Hz, 0x0, 1
 monitor=$OutputLeft, addreserved, 10, 10, 20, 20    
 workspace = 1, monitor:$OutputLeft, default:true, defaultName:Home, decorate:true
-workspace = 3, monitor:$OutputLeft, defaultName:Web, decorate:true
-workspace = 5, monitor:$OutputLeft, defaultName:Code, decorate:true
-workspace = 7, monitor:$OutputLeft
-workspace = 9, monitor:$OutputLeft
+workspace = 2, monitor:$OutputLeft, defaultName:Web, decorate:true
+workspace = 3, monitor:$OutputLeft, defaultName:Code, decorate:true
+workspace = 4, monitor:$OutputLeft, defaultName:Media, decorate:true
+workspace = 5, monitor:$OutputLeft, defaultName:Social, decorate:true
 
 # Small Monitor
 
 monitor=$OutputRight, 1920x1080@60.00Hz, 2560x360, 1.0
-workspace = 2, monitor:$OutputRight
-workspace = 4, monitor:$OutputRight
-workspace = 6, monitor:$OutputRight
-workspace = 8, monitor:$OutputRight
-workspace = 0, monitor:$OutputRight
+workspace = 6, monitor:$OutputRight, defaultName:Term, decorate:true
+workspace = 7, monitor:$OutputRight, defaultName:Dev, decorate:true
+workspace = 8, monitor:$OutputRight, defaultName:Chat, decorate:true
+workspace = 9, monitor:$OutputRight, defaultName:Files, decorate:true
+workspace = 0, monitor:$OutputRight, defaultName:Scratch, decorate:true
