--- a/hyprland.conf
+++ b/hyprland.conf
@@ -78,9 +78,9 @@ $bin = /home/mike/.dotFiles/bin/
 # personal bind
 bind = , XF86HomePage, exec, follow_mouse.sh no #-> Follow mouse
 bindr = , XF86HomePage, exec, follow_mouse.sh yes #-> Follow mouse
-bind = $mainMod SHIFT, SPACE, exec, bar -b #-> Waybar Big
+bind = $mainMod SHIFT, b, exec, bar -b #-> Waybar Big
+bind = $mainMod, b, exec, bar -s #-> Waybar Small
 bind = $mainMod SHIFT, P, exec, $bin/pwm #-> Password Manager
-bind = $mainMod, SPACE, exec, bar -s #-> Waybar Small
 bind = $mainMod, Return, layoutmsg, swapwithmaster
 bind = $mainMod SHIFT, F, fullscreen
 # bind = $mainMod SHIFT, L, exec, hyprlock
@@ -92,22 +92,12 @@ bind = $mainMod, Q, killactive
 bind = $mainMod Ctrl, Q, exec, kitty --title="ExitScript" -e exit_script.sh #-> Exit Script
 bind = $mainMod SHIFT, Q, exec, hyprshutdown
 # bind = $mainMod, E, exec, thunar
-# bind = $mainMod, m, exec, pkill wofi || wofi #-> menu
-bind = $mainMod, m, exec, pkill hyprlauncher || hyprlauncher
+bind = $mainMod, m, exec, pkill wofi || wofi #-> menu
+# bind = $mainMod, m, exec, hyprlauncher
 # bind = $mainMod, m, exec, kitty --title="launcher" -e launcher.sh
-bind = $mainMod, b, exec, wp_random.sh #-> wallpaper randomizer
+bind = $mainMod, w, exec, wp_random.sh #-> wallpaper randomizer
 bind = $mainMod SHIFT, C, centerwindow 
 bind = $mainMod, f, togglefloating 
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 0
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, exec, best_keys.sh left
