--- a/sources/submaps.conf
+++ b/sources/submaps.conf
@@ -1,3 +1,21 @@
+bind = $mainMod, space, submap, go_to
+submap = go_to
+
+bind = , h, exec, smc -h "workspace 1" #-> Home
+bind = , w, exec, smc -h "workspace 2" #-> Web
+bind = , c, exec, smc -h "workspace 3" #-> Code
+bind = , f, exec, smc -h "workspace 4" #-> Facebook
+bind = , s, exec, smc -h "workspace 5" #-> Social
+bind = , 6, exec, smc -h "workspace 6"
+bind = , 7, exec, smc -h "workspace 7"
+bind = , 8, exec, smc -h "workspace 8"
+bind = , 9, exec, smc -h "workspace 9"
+bind = , 0, exec, smc -h "workspace 0"
+
+bind = $mainMod, space, submap, reset
+bind = , escape, submap, reset
+submap = reset
+
 $smc = exec, /home/mike/.config/hypr/scripts/smc
 # --------------------------------------------
 bind = $mainMod, S, submap, scripts
@@ -9,6 +27,7 @@ bind = , m, exec, smc -n makoctl reload & notify-send "Mako Reloaded" #-> reload
 bind = , i, exec, smc -n info_script #-> Info Files
 bind = , e, exec, smc -n ~/bin/mail #-> Send Email
 bind = , p, exec, smc -n ~/bin/pwm #-> Stuff
+bind = , t, exec, smc -n ~/bin/tab #-> Stuff
 # color picker, clear history and pick new color
 bind = , k, exec, killall mako #-> kill mako
 bind = , l, exec, pkill -f listeners #-> kill listeners
@@ -37,7 +56,7 @@ bind = , d, exec, smc -n "kitty --title "configWindow" -e nvim /home/mike/dev/" 
 bind = , h, exec, smc -n "kitty --title "hyprConf" -e nvim /home/mike/.config/hypr/" #-> hypr folder
 bind = , f, exec, smc -n "kitty --title "fishConf" -e nvim /home/mike/.config/fish/" #-> fish folder
 bind = , k, exec, smc -n "kitty --title "kittyConf" -e nvim /home/mike/.config/kitty/" #-> kitty folder
-bind = , m, exec, smc -n "kitty --title "kittyConf" -e nvim /home/mike/.config/mako/config" #-> mako file
+bind = , m, exec, smc -n "kitty --title "makoConf" -e nvim /home/mike/.config/mako/config" #-> mako file
 bind = , n, exec, smc -n "kitty --title "nvimConf" -e nvim /home/mike/.config/nvim/" #-> nvim folder
 bind = SHIFT, n, exec, smc -n "kitty --title "ncmpcppConf" -e nvim /home/mike/.config/ncmpcpp/" #-> ncmpcpp folder
 bind = , w, exec, smc -n "kitty --title "wayConf" -e nvim /home/mike/.config/hypr/waybar/" #-> waybar folder
@@ -104,6 +123,7 @@ bind = $mainMod, A, submap, apps
 submap = apps
 
 bind = , q, exec, smc -n qutebrowser 								#-> 			qutebrowser
+bind = , f, exec, smc -n "qutebrowser www.facebook.com www.messenger.com"							#-> 			qutebrowser
 bind = , g, exec, smc -n sleep 1 && glava 									#-> 			glava
 bind = , b, exec, smc -n google-chrome-stable 						#-> 			chrome
 bind = SHIFT, b, exec, smc -n "google-chrome-stable --incognito" 	#->	chrome incognito
