--- a/sources/windowrules.conf
+++ b/sources/windowrules.conf
@@ -31,14 +31,14 @@ windowrule {
 		center = on
 }
 
-windowrule = match:title hyprConf, float yes
-windowrule = match:title fishConf, float yes
-windowrule = match:title kittyConf, float yes
-windowrule = match:title nvimConf, float yes
-windowrule = match:title wayConf, float yes
-windowrule = match:title binConf, float yes
-windowrule = match:title devConf, float yes
-windowrule = match:title ncmpcppConf, float yes
+windowrule = match:title hyprConf, workspace 3
+windowrule = match:title fishConf, workspace 3
+windowrule = match:title kittyConf, workspace 3
+windowrule = match:title nvimConf, workspace 3
+windowrule = match:title wayConf, workspace 3
+windowrule = match:title binConf, workspace 3
+windowrule = match:title devConf, workspace 3
+windowrule = match:title ncmpcppConf, workspace 3
 windowrule = match:class thunar, size 50% 50%
 windowrule = match:class org.qutebrowser.qutebrowser workspace 1
 windowrule = match:class live_server monitor:DVI-D-1 special:notes
@@ -52,6 +52,37 @@ windowrule {
         size = 1024 768
 		center = on
 }
+
+windowrule {
+		name = "Chrome"
+		match:class = google-chrome
+		workspace = 2
+		float = false
+
+        # size = 1024 768
+		# center = on
+}
+
+windowrule {
+		name = "Qutebrowser"
+		match:class = org.qutebrowser.qutebrowser
+		workspace = 2
+		float = false
+
+        # size = 1024 768
+		# center = on
+}
+
+windowrule {
+		name = "Facebook"
+		match:initial_title = http://www.facebook.com - qutebrowser
+		workspace = 4
+		float = false
+
+        # size = 1024 768
+		# center = on
+}
+
 
 windowrule {
 		name = tags
