--- a/waybar/big_bar.jsonc
+++ b/waybar/big_bar.jsonc
@@ -1,10 +1,10 @@
 {
   "reload_style_on_change": true,
   "output": "HDMI-A-1",
-  // "layer": "top",
+  "layer": "top",
   "modules-left": ["custom/current_layout", "hyprland/workspaces"],
   "modules-center": ["hyprland/window"],
-  "modules-right": ["idle_inhibitor", "mpd", "clock"],
+  "modules-right": ["idle_inhibitor", "mpd", "clock", "tray"],
 
   "clock": {
     "format": "{:%a, %b %e | %I:%M}",
@@ -103,12 +103,12 @@
     "format": "Online",
     "format-disconnected": "Disconnected ⚠",
   },
-  "ext/workspaces": {
-    "format": "{icon}",
-    "ignore-hidden": false,
-    "on-click": "activate",
-    "sort-by-id": true,
-  },
+  // "ext/workspaces": {
+  //   "format": "{icon}",
+  //   "ignore-hidden": false,
+  //   "on-click": "activate",
+  //   "sort-by-id": true,
+  // },
   "hyprland/workspaces": {
     "format": "{name} {icon}",
     "active-only": false,
@@ -127,18 +127,6 @@
     },
     "all-outputs": false, // recommended
   },
-  // "hyprland/workspaces": {
-  //   "format": "<sub>{icon}</sub>\n{windows}",
-  //   "format-window-separator": "\n",
-  //   "window-rewrite-default": "",
-  //   "window-rewrite": {
-  //     "title<.*youtube.*>": "", // Windows whose titles contain "youtube"
-  //     "class<firefox>": "", // Windows whose classes are "firefox"
-  //     "class<firefox> title<.*github.*>": "", // Windows whose class is "firefox" and title contains "github". Note that "class" always comes first.
-  //     "foot": "", // Windows that contain "foot" in either class or title. For optimization reasons, it will only match against a title if at least one other window explicitly matches against a title.
-  //     "code": "󰨞",
-  //   },
-  // },
   "dwl/window#layout": {
     "format": "[{layout}]",
   },
