--- a/hyprland.conf
+++ b/hyprland.conf
@@ -11,7 +11,7 @@
 # Set programs that you use
 $terminal = kitty
 $run = kitty -e 
-$fileManager = kitty --title="yazi" -e yazi
+$fileManager = $terminal --title="yazi" -e yazi
 # $menu = pkill wofi || wofi --show drun
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
@@ -78,25 +78,17 @@ $bin = /home/mike/.dotFiles/bin/
 # personal bind
 bind = , XF86HomePage, exec, follow_mouse.sh no #-> Follow mouse
 bindr = , XF86HomePage, exec, follow_mouse.sh yes #-> Follow mouse
-bind = $mainMod SHIFT, b, exec, bar -b #-> Waybar Big
-bind = $mainMod, b, exec, bar -s #-> Waybar Small
 bind = $mainMod SHIFT, P, exec, $bin/pwm #-> Password Manager
-bind = $mainMod, Return, layoutmsg, swapwithmaster
+bind = $mainMod, Space, layoutmsg, swapwithmaster
 bind = $mainMod SHIFT, F, fullscreen
-# bind = $mainMod SHIFT, L, exec, hyprlock
-# Screenshot region and pipe to swappy for editing
 
-# Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod SHIFT, Return, exec, $terminal #-> Terminal
 bind = $mainMod, Q, killactive
-bind = $mainMod Ctrl, Q, exec, kitty --title="ExitScript" -e exit_script.sh #-> Exit Script
+bind = $mainMod Ctrl, Q, exec, $terminal --title="ExitScript" -e exit_script.sh #-> Exit Script
 bind = $mainMod SHIFT, Q, exec, hyprshutdown
-# bind = $mainMod, E, exec, thunar
-bind = $mainMod, m, exec, pkill wofi || wofi #-> menu
-# bind = $mainMod, m, exec, hyprlauncher
-# bind = $mainMod, m, exec, kitty --title="launcher" -e launcher.sh
+
+bind = $mainMod, m, exec, pkill rofi || rofi -show drun #-> menu
 bind = $mainMod, w, exec, wp_random.sh #-> wallpaper randomizer
-bind = $mainMod SHIFT, C, centerwindow 
 bind = $mainMod, f, togglefloating 
 
 # Move focus with mainMod + arrow keys
@@ -117,9 +109,8 @@ bind = $mainMod SHIFT, h, exec, best_keys.sh mvleft
 
 bind = $mainMod SHIFT Ctrl, b, exec, python3 /home/mike/.config/hypr/scripts/bind_csm.py
 bind = $mainMod Ctrl, b, exec, cat ~/.config/hypr/.bind_list.txt | rofi -dmenu -i #-> bind list
+
 # bind = Ctrl, x, exec, killall rofi || cliphist list | rofi -dmenu -i | cliphist decode | wl-copy #-> clipboard
-
-
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
@@ -144,10 +135,6 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause #-> Play/Pause
 bindl = , XF86AudioPrev, exec, playerctl previous #-> Previous track
 bind = , print, exec, grim -g "$(slurp)" - | swappy -f - -o - #-> Screenshot
 bind = SHIFT, print, exec, sleep 4 && grim -g "$(slurp)" - | swappy -f - -o - #-> 4 second Screenshot
-
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
 
 # NOTE:  workspace rules
 workspace = w[tv1], gapsout:0, gapsin:0
