--- a/sources/submaps.conf
+++ b/sources/submaps.conf
@@ -1,20 +1,20 @@
-bind = $mainMod, space, submap, go_to
-submap = go_to
 
-bind = , h, exec, smc -h "workspace 1" #-> Home
-bind = , w, exec, smc -h "workspace 2" #-> Web
-bind = , c, exec, smc -h "workspace 3" #-> Code
-bind = , f, exec, smc -h "workspace 4" #-> Facebook
-bind = , s, exec, smc -h "workspace 5" #-> Social
-bind = , 6, exec, smc -h "workspace 6"
-bind = , 7, exec, smc -h "workspace 7"
-bind = , 8, exec, smc -h "workspace 8"
-bind = , 9, exec, smc -h "workspace 9"
-bind = , 0, exec, smc -h "workspace 0"
+bind = $mainMod, b, submap, bar
+submap = bar
+#-s
+bind = , b, exec, bar -b #-> Toggle Waybar Big
+bind = , s, exec, bar -s #-> Toggle Waybar Small
+bind = , k, exec, killall waybar #-> Kill Waybar
+bind = , r, exec, bar -r #-> Restore Waybar
+bind = , x, exec, killall waybar && bar -r #-> Restart Waybar
 
-bind = $mainMod, space, submap, reset
+bind = $mainMod, b, submap, reset
 bind = , escape, submap, reset
+bind = , catchall, submap, reset
 submap = reset
+
+# NOTE: ---
+
 
 $smc = exec, /home/mike/.config/hypr/scripts/smc
 # --------------------------------------------
@@ -22,16 +22,21 @@ bind = $mainMod, S, submap, scripts
 submap = scripts
 # rebuild bind reference
 bind = , b, exec, python3 /home/mike/.config/hypr/scripts/bind_csm.py #-> Update Bind List
-# reload mako
+#-s
+#-s mako
 bind = , m, exec, smc -n makoctl reload & notify-send "Mako Reloaded" #-> reload mako
+bind = , k, exec, killall mako #-> kill mako
+#-s
 bind = , i, exec, smc -n info_script #-> Info Files
 bind = , e, exec, smc -n ~/bin/mail #-> Send Email
 bind = , p, exec, smc -n ~/bin/pwm #-> Stuff
 bind = , t, exec, smc -n ~/bin/tab #-> Stuff
+bind = SHIFT, m, exec, smc -n "$terminal -e mr" #-> Update Mirrors
 # color picker, clear history and pick new color
-bind = , k, exec, killall mako #-> kill mako
 bind = , l, exec, pkill -f listeners #-> kill listeners
 bind = , s, exec, ~/.config/hypr/listeners/submap_listen.sh #-> Restart submap listener
+#-s
+#-s Exit
 bind = $mainMod, S, submap, reset
 bind = , escape, submap, reset
 
@@ -43,51 +48,76 @@ bind = , n, exec, smc -n "pick.sh -new default" #-> Colorpick New list hex
 bind = , m, exec, smc -n "pick.sh -new_rgb default" #-> Colorpick New list rgb
 bind = , p, exec, pick.sh -add default #-> Colorpick Add to list hex
 bind = , r, exec, pick.sh -add_rgb default #-> Colorpick Add to list rgb
-bind = , s, exec, smc -n "kitty --title='colorList' nvim ~/Documents/colors/default.css" #-> Colorpick List
+bind = , s, exec, smc -n "$terminal --title='colorList' nvim ~/Documents/colors/default.css" #-> Colorpick List
 bind = , escape, submap, reset
 submap = reset
 # --------------------------------------------
 bind = $mainMod, C, submap, configs
 submap = configs
-
-# bind = , b, exec, smc -n "kitty --title "binConf" -e nvim /home/mike/bin/" #-> bin folder
-bind = , b, exec, smc -n "kitty --title 'configWindow' -e nvim /home/mike/bin/" #-> bin folder
-bind = , d, exec, smc -n "kitty --title "configWindow" -e nvim /home/mike/dev/" #-> dev folder
-bind = , h, exec, smc -n "kitty --title "hyprConf" -e nvim /home/mike/.config/hypr/" #-> hypr folder
-bind = , f, exec, smc -n "kitty --title "fishConf" -e nvim /home/mike/.config/fish/" #-> fish folder
-bind = , k, exec, smc -n "kitty --title "kittyConf" -e nvim /home/mike/.config/kitty/" #-> kitty folder
-bind = , m, exec, smc -n "kitty --title "makoConf" -e nvim /home/mike/.config/mako/config" #-> mako file
-bind = , n, exec, smc -n "kitty --title "nvimConf" -e nvim /home/mike/.config/nvim/" #-> nvim folder
-bind = SHIFT, n, exec, smc -n "kitty --title "ncmpcppConf" -e nvim /home/mike/.config/ncmpcpp/" #-> ncmpcpp folder
-bind = , w, exec, smc -n "kitty --title "wayConf" -e nvim /home/mike/.config/hypr/waybar/" #-> waybar folder
+#-s
+# bind = , b, exec, smc -n "$terminal --title "binConf" -e nvim /home/mike/bin/" #-> bin folder
+bind = , b, exec, smc -n "$terminal --title 'configWindow' -e nvim /home/mike/bin/" #-> bin folder
+bind = , d, exec, smc -n "$terminal --title "configWindow" -e nvim /home/mike/dev/" #-> dev folder
+bind = , h, exec, smc -n "$terminal --title "hyprConf" -e nvim /home/mike/.config/hypr/" #-> hypr folder
+bind = , f, exec, smc -n "$terminal --title "fishConf" -e nvim /home/mike/.config/fish/" #-> fish folder
+bind = , k, exec, smc -n "$terminal --title "$terminalConf" -e nvim /home/mike/.config/$terminal/" #-> $terminal folder
+bind = , m, exec, smc -n "$terminal --title "makoConf" -e nvim /home/mike/.config/mako/config" #-> mako file
+bind = , n, exec, smc -n "$terminal --title "nvimConf" -e nvim /home/mike/.config/nvim/" #-> nvim folder
+bind = , t, exec, smc -n "$terminal --title "ncmpcppConf" -e nvim /home/mike/.config/ncmpcpp/" #-> ncmpcpp folder
+bind = , w, exec, smc -n "$terminal --title "wayConf" -e nvim /home/mike/.config/hypr/waybar/" #-> waybar folder
+#-s
 bind = $mainMod, C, submap, reset
 bind = , escape, submap, reset
 submap = reset
 
 # NOTE: --------------------------------------------
-bind = , XF86Search, submap, workspaces
-submap = workspaces
-
+bind = $mainMod, Return, submap, Quick_Menu
+submap = Quick_Menu
+#-s
+#-s Go to...( +shift to move )
+#-s (h)ome
+#-s (w)eb
+#-s (k)rita
+#-s (f)acebook
+#-s (c)ode
+#-s (m)usicm
+#-s
+#-s Layouts
 bind = , s, exec, hyprctl keyword general:layout scrolling #-> Set layout to scrolling
 bind = , d, exec, hyprctl keyword general:layout dwindle #-> Set layout to dwindle
 bind = , m, exec, hyprctl keyword general:layout master #-> Set layout to master
+#-s
+#-s Toggle bar
+#-s 1: left
+#-s 2: right
+bind = , 1, exec, bar -b #-d
+bind = , 2, exec, bar -s #-d
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind =  , 1,exec, smc -h "movetoworkspace 1" #-> Move to WS 1
-bind =  , 2, exec, smc -h "movetoworkspace 2" #-> Move to WS 2
-bind =  , 3, exec, smc -h "movetoworkspace 3" #-> Move to WS 3
-bind =  , 4, exec, smc -h "movetoworkspace 4" #-> Move to WS 4
-bind =  , 5, exec, smc -h "movetoworkspace 5" #-> Move to WS 5
-bind =  , 6, exec, smc -h "movetoworkspace 6" #-> Move to WS 6
-bind =  , 7, exec, smc -h "movetoworkspace 7" #-> Move to WS 7
-bind =  , 8, exec, smc -h "movetoworkspace 8" #-> Move to WS 8
-bind =  , 9, exec, smc -h "movetoworkspace 9" #-> Move to WS 9
-bind =  , 0, exec, smc -h "movetoworkspace 10" #-> Move to WS 10
+bind = , h, exec, smc -h "workspace name:Home" #-d
+bind = , w, exec, smc -h "workspace name:Web" #-d
+bind = , k, exec, smc -h "workspace name:Krita" #-d
+bind = , f, exec, smc -h "workspace name:Facebook" #-d
+bind = , c, exec, smc -h "workspace name:Code" #-d
+bind = , m, exec, smc -h "workspace name:Music" #-d
 
-bind = , h, exec, smc -c "layoutmsg colresize -conf" #-> Column Shrink
-bind = , l, exec, smc -c "layoutmsg colresize +conf" #-> Column Grow
-bind = SHIFT, f, exec, smc -c "layoutmsg fit all" #-> [F]it All
+bind =  SHIFT, h,exec, smc -h "movetoworkspace name:Home" #-d
+bind =  SHIFT, w, exec, smc -h "movetoworkspace name:Web" #-d
+bind =  SHIFT, k, exec, smc -h "movetoworkspace name:Krita" #-d
+bind =  SHIFT, f, exec, smc -h "movetoworkspace name:Facebook" #-d
+bind =  SHIFT, c, exec, smc -h "movetoworkspace name:Code" #-d
+bind =  SHIFT, m, exec, smc -h "movetoworkspace name:Music" #-d
+bind =  , 7, exec, smc -h "movetoworkspace 7" #-d
+bind =  , 8, exec, smc -h "movetoworkspace 8" #-d
+bind =  , 9, exec, smc -h "movetoworkspace 9" #-d
+bind =  , 0, exec, smc -h "movetoworkspace 10" #-d
+#-s
+#-s Scrolling
+bind = , left, exec, smc -c "layoutmsg colresize -conf" #-> Column Shrink
+bind = , right, exec, smc -c "layoutmsg colresize +conf" #-> Column Grow
+bind = Ctrl, f, exec, smc -c "layoutmsg fit all" #-> [F]it All
 bind = , a, exec, smc -c "layoutmsg togglefit" #-> Re-[a]lign
+#-s
+bind = , c, centerwindow 
 bind = , XF86Back, exec, smc -h "movecurrentworkspacetomonitor l" #-> Move Monitor Left
 bind = , XF86Forward, exec, smc -h "movecurrentworkspacetomonitor r" #-> Move Monitor Right
 bind = , t, togglefloating
@@ -100,18 +130,19 @@ submap = reset
 # NOTE: --------------------------------------------
 bind = $mainMod, o, submap, opacity
 submap = opacity
-
-bind = , 0, setprop, active, alpha 1.0
-bind = , 1, setprop, active, alpha 0.1
-bind = , 2, setprop, active, alpha 0.2
-bind = , 3, setprop, active, alpha 0.3
-bind = , 4, setprop, active, alpha 0.4
-bind = , 5, setprop, active, alpha 0.5
-bind = , 6, setprop, active, alpha 0.6
-bind = , 7, setprop, active, alpha 0.7
-bind = , 8, setprop, active, alpha 0.8
-bind = , 9, setprop, active, alpha 0.9
-
+#-s
+#-s 1 - 0 for various opacity
+bind = , 0, setprop, active, opacity 1.0 #-d
+bind = , 1, setprop, active, opacity 0.1 #-d
+bind = , 2, setprop, active, opacity 0.2 #-d
+bind = , 3, setprop, active, opacity 0.3 #-d
+bind = , 4, setprop, active, opacity 0.4 #-d
+bind = , 5, setprop, active, opacity 0.5 #-d
+bind = , 6, setprop, active, opacity 0.6 #-d
+bind = , 7, setprop, active, opacity 0.7 #-d
+bind = , 8, setprop, active, opacity 0.8 #-d
+bind = , 9, setprop, active, opacity 0.9 #-d
+#-s
 bind = , o, submap, reset
 bind = , escape, submap, reset
 submap = reset
@@ -121,7 +152,7 @@ submap = reset
 
 bind = $mainMod, A, submap, apps
 submap = apps
-
+#-s
 bind = , q, exec, smc -n qutebrowser 								#-> 			qutebrowser
 bind = , f, exec, smc -n "qutebrowser www.facebook.com www.messenger.com"							#-> 			qutebrowser
 bind = , g, exec, smc -n sleep 1 && glava 									#-> 			glava
@@ -130,6 +161,7 @@ bind = SHIFT, b, exec, smc -n "google-chrome-stable --incognito" 	#->	chrome inc
 bind = , i, exec, smc -n inkscape 									#-> 			inkscape
 bind = , k, exec, smc -n krita 										#-> 			krita
 bind = , y, exec, smc -n app.ytmdesktop.ytmdesktop 					#->			youtube
+#-s
 bind = $mainMod, A, submap, reset
 bind = , escape, submap, reset
 submap = reset
