--- a/sources/windowrules.conf
+++ b/sources/windowrules.conf
@@ -66,11 +66,21 @@ windowrule {
 windowrule {
 		name = "Qutebrowser"
 		match:class = org.qutebrowser.qutebrowser
-		workspace = 2
+		workspace = name:Web
 		float = false
 
         # size = 1024 768
 		# center = on
+}
+
+windowrule {
+		name = Save_File
+		match:class = xdg-desktop-portal-gtk
+		match:title = All Files
+		float = true
+
+        size = 1024 768
+		center = on
 }
 
 windowrule {
