--- a/sources/monitors.conf
+++ b/sources/monitors.conf
@@ -3,16 +3,16 @@ $OutputRight = DVI-D-1
 # Big Monitor
 monitor=$OutputLeft, 2560x1440@120.00Hz, 0x0, 1
 # monitor=$OutputLeft, addreserved, 10, 10, 20, 20    
-workspace = 1, monitor:$OutputLeft, default:true, defaultName:Home, decorate:true
-workspace = 2, monitor:$OutputLeft, defaultName:Web, decorate:true, on-created-empty:google-chrome-stable
-workspace = 3, monitor:$OutputLeft, defaultName:Code, decorate:true, on-created-empty:kitty -e tmux
-workspace = 4, monitor:$OutputLeft, defaultName:Facebook, decorate:true, on-created-empty:qutebrowser "https://www.facebook.com" "https://www.messenger.com"
+workspace = name:Home, monitor:$OutputLeft, default:true, defaultName:Home, decorate:true
+workspace = name:Web, monitor:$OutputLeft, defaultName:Web, decorate:true, on-created-empty:google-chrome-stable
+workspace = name:Krita, monitor:$OutputLeft, defaultName:Drawing, on-created-empty:krita
+workspace = name:Facebook, monitor:$OutputLeft, defaultName:Facebook, decorate:true, on-created-empty:qutebrowser www.facebook.com www.messenger.com
 
 # Small Monitor
 
-# monitor=$OutputRight, 1920x1080@60.00Hz, 2560x360, 1.0
-# workspace = 6, monitor:$OutputRight, defaultName:Term, decorate:true
-# workspace = 7, monitor:$OutputRight, defaultName:Dev, decorate:true
-# workspace = 8, monitor:$OutputRight, defaultName:Chat, decorate:true
-# workspace = 9, monitor:$OutputRight, defaultName:Files, decorate:true
+monitor=$OutputRight, 1920x1080@60.00Hz, 2560x360, 1.0
+workspace = name:Code, monitor:$OutputRight, defaultName:Code, on-created-empty:kitty -e tmux, decorate:true
+workspace = name:Music, monitor:$OutputRight, defaultName:Music, decorate:true, on-created-empty:kitty -e ncmpcpp --host localhost
+workspace = 8, monitor:$OutputRight, defaultName:Chat, decorate:true
+workspace = 9, monitor:$OutputRight, defaultName:Files, decorate:true
 # workspace = 0, monitor:$OutputRight, defaultName:Scratch, decorate:true
