--- a/sources/specialWorkspaces.conf
+++ b/sources/specialWorkspaces.conf
@@ -1,9 +1,9 @@
 # Example special workspace (scratchpad)
 
 
-# servers
-workspace = special:servers, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='servers' -e svs
-bind = , KP_Page_Up, togglespecialworkspace, servers
+# ST_servers
+workspace = special:ST_servers, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='ST_servers' -e svs
+bind = , KP_Page_Up, togglespecialworkspace, ST_servers
 bind = , KP_Page_Up, exec, resize_center.sh 95% 95%
 
 workspace = special:sti, rounding:false, monitor:0, on-created-empty:[float] kitty --title='sti' -e sti
@@ -55,9 +55,9 @@ bind = , XF86Calculator, centerwindow
 bind = , XF86Calculator, moveactive, 675 0
 
 workspace = special:my_copy, rounding:false, on-created-empty:[float; size 90% 95%] copyq toggle
-bind = $mainMod Ctrl, x, focusmonitor, HDMI-A-1
-bind = $mainMod Ctrl, x, togglespecialworkspace, my_copy
-bind = $mainMod Ctrl, x, exec, resize_center.sh 90% 95%
+bind = Ctrl, x, focusmonitor, HDMI-A-1
+bind = Ctrl, x, togglespecialworkspace, my_copy
+bind = Ctrl, x, exec, resize_center.sh 90% 95%
 
 # drop down terminal
 workspace = special:term_util, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='term_util' -e tmux new -s UTILITY
