--- a/waybar/big_bar.jsonc
+++ b/waybar/big_bar.jsonc
@@ -1,7 +1,7 @@
 {
   "reload_style_on_change": true,
   "output": "HDMI-A-1",
-  "layer": "top",
+  // "layer": "top",
   "modules-left": ["custom/current_layout", "hyprland/workspaces"],
   "modules-center": ["hyprland/window"],
   "modules-right": ["idle_inhibitor", "mpd", "clock", "tray"],
