--- a/waybar/small_bar.jsonc
+++ b/waybar/small_bar.jsonc
@@ -1,7 +1,7 @@
 {
   "reload_style_on_change": true,
   "output": "DVI-D-1",
-  "layer": "top",
+  // "layer": "top",
   "modules-left": ["hyprland/workspaces"],
   "modules-center": ["hyprland/window"],
   "modules-right": ["pulseaudio", "memory"],
