--- a/hyprland.conf
+++ b/hyprland.conf
@@ -82,7 +82,7 @@ bind = $mainMod SHIFT, P, exec, $bin/pwm #-> Password Manager
 bind = $mainMod, Space, layoutmsg, swapwithmaster
 bind = $mainMod SHIFT, F, fullscreen
 
-bind = $mainMod SHIFT, Return, exec, $terminal #-> Terminal
+bind = $mainMod SHIFT, Return, exec, new_term.sh #-> Terminal
 bind = $mainMod, Q, killactive
 bind = $mainMod Ctrl, Q, exec, $terminal --title="ExitScript" -e exit_script.sh #-> Exit Script
 bind = $mainMod SHIFT, Q, exec, hyprshutdown
