--- a/hyprland.conf
+++ b/hyprland.conf
@@ -82,13 +82,13 @@ bind = $mainMod SHIFT, P, exec, $bin/pwm #-> Password Manager
 bind = $mainMod, Space, layoutmsg, swapwithmaster
 bind = $mainMod SHIFT, F, fullscreen
 
-bind = $mainMod SHIFT, Return, exec, new_term.sh #-> Terminal
+# bind = $mainMod SHIFT, Return, exec, new_term.sh #-> Terminal
 bind = $mainMod, Q, killactive
 bind = $mainMod Ctrl, Q, exec, $terminal --title="ExitScript" -e exit_script.sh #-> Exit Script
 bind = $mainMod SHIFT, Q, exec, hyprshutdown
 
-bind = $mainMod, m, exec, pkill rofi || rofi -show drun #-> menu
-bind = $mainMod, w, exec, wp_random.sh #-> wallpaper randomizer
+bind = , Menu, exec, pkill rofi || rofi -show drun #-> menu
+BIND = $mainMod, w, exec, wp_random.sh #-> wallpaper randomizer
 bind = $mainMod, f, togglefloating 
 
 # Move focus with mainMod + arrow keys
