--- a/sources/windowrules.conf
+++ b/sources/windowrules.conf
@@ -21,6 +21,15 @@ windowrule = match:class photoqt, float yes
 windowrule = match:class file-jpeg float
 windowrule = match:class zenity, float yes
 
+windowrule {
+		name = frog
+		match:class = com.github.tenderowl.frog
+		float = true
+		monitor = HDMI-A-1
+
+        size = 565 800
+		move = 1975 330
+}
 
 windowrule {
 		name = colorList
@@ -56,7 +65,7 @@ windowrule {
 windowrule {
 		name = "Chrome"
 		match:class = google-chrome
-		workspace = 2
+		workspace = name:Web
 		float = false
 
         # size = 1024 768
