--- a/sources/submaps.conf
+++ b/sources/submaps.conf
@@ -29,6 +29,7 @@ bind = , k, exec, killall mako #-> kill mako
 #-s
 bind = , i, exec, smc -n info_script #-> Info Files
 bind = , e, exec, smc -n ~/bin/mail #-> Send Email
+bind = SHIFT, e, exec, smc -n "kitty -e nvim ~/bin/mail" #-> Edit Email list
 bind = , p, exec, smc -n ~/bin/pwm #-> Stuff
 bind = , t, exec, smc -n ~/bin/tab #-> Stuff
 bind = SHIFT, m, exec, smc -n "$terminal -e mr" #-> Update Mirrors
