--- a/sources/look_and_feel.conf
+++ b/sources/look_and_feel.conf
@@ -38,7 +38,7 @@ general {
     # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
     # Default layout choices are 'dwindle' and 'master'. More layouts available via plugin.
-    layout = scrolling
+    layout = master
     # snap is for floating windows and whether or not they should stick
     # at the edges of the monitor and other windows<D-Bslash>
     snap {
@@ -175,8 +175,13 @@ input {
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+		mouse {
+
+		}
 
     touchpad {
+				
+		middle_button_emulation = true
         natural_scroll = false
     }
 }
