--- a/sources/windowrules.conf
+++ b/sources/windowrules.conf
@@ -40,6 +40,24 @@ windowrule {
 		center = on
 }
 
+windowrule {
+		name = metronome
+		match:class = com.adrienplazas.Metronome
+		float = true
+
+        size = 360 532
+		move = 2150 110
+}
+
+windowrule {
+		name = music scroller
+		match:class = Tk
+		float = true
+
+        size = 1400 1300
+		center = on
+}
+
 windowrule = match:title hyprConf, workspace 3
 windowrule = match:title fishConf, workspace 3
 windowrule = match:title kittyConf, workspace 3
